--- a/Pasteleria-mil-sabores (Luyi.T)/css/estilos.css
+++ b/Pasteleria-mil-sabores (Luyi.T)/css/estilos.css
@@ -18,12 +18,9 @@ h1, h2, h3, .logo h1 {
 
 /* Navegación */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 50px;
-    background-color: #ffffff; /* Fondo blanco para limpieza visual */
-    border-bottom: 2px solid #FFC0CB; /* Línea Rosa Suave  */
+    background-color: #FFC0CB; /* Fondo Crema Pastel oficial  */
+    border-bottom: 2px solid #FFF5E1; /* Línea inferior Rosa Suave  */
+    padding: 1rem 0;
 }
 
 .nav-links {
@@ -114,4 +111,31 @@ footer {
 footer h4 {
     color: #FFC0CB; /* Títulos del footer en Rosa Suave  */
     font-family: 'Pacifico', cursive;
+}
+
+.text-chocolate {
+    color: #8B4513; /* Color chocolate oficial */
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.text-chocolate:hover {
+    color: #FFC0CB; /* Rosa Suave */
+}
+.navbar .container {
+    position: relative; /* Crea un marco de referencia */
+    height: 80px;       /* Define una altura fija para la barra */
+}
+
+.navbar-brand img {
+    position: absolute; /* El logo se mueve independiente de la barra */
+    top: -40px;           /* Ajusta la distancia desde arriba */
+    left: -45px;
+    width: 215px;       /* Aquí puedes poner el tamaño que quieras */
+    height: auto;
+    z-index: 10;        /* Asegura que el logo quede por encima de todo */
+}
+
+.titulo-brand {
+    margin-left: 130px; /* Empuja el texto para que no lo tape el logo grande */
 }
