--- a/Pasteleria-mil-sabores (Luyi.T)/css/nosotros.css
+++ b/Pasteleria-mil-sabores (Luyi.T)/css/nosotros.css
@@ -1,15 +1,18 @@
+/* Sección Nosotros */
 .border-rosa {
-    border: 5px solid #FFC0CB; /* Acento Rosa Suave solicitado [cite: 73] */
+    border: 5px solid #FFC0CB;
 }
 
 .dev-avatar {
     font-size: 3rem;
-    background-color: #FFF5E1; /* Fondo Crema [cite: 71] */
+    background-color: #FFF5E1;
     width: 80px;
     height: 80px;
     line-height: 80px;
     border-radius: 50%;
-    border: 2px solid #8B4513; /* Chocolate [cite: 73] */
+    border: 2px solid #8B4513;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .bg-white {
